--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,8 +1,8 @@
-<section class="hero" style="margin-top: 250px;">
-  <footer class="footer">
+<section class="hero">
+  <footer class="footer" style="padding-bottom: 48px;">
     <div class="container">
-      <div class="content has-text-centered" id="footer-content">
-        <p id="footer-text">
+      <div class="content has-text-centered" id="footer-content" style="background-color: rgba(255,255,255,0.25)">
+        <p id="footer-text" style="color: black;">
           <strong >Sclean</strong> by Theo Lemle, Nicolaj Terndrup & Frederik Christoffersen
           <span class="icon is-small">
             <i class="fa fa-copyright"></i>
