fixed email auth

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -30,7 +30,7 @@
 		    	</div>
 						
 		    </div>
-		    <p style="color:gray;">These will not be shown publicly. Please confirm your own age, even if this account is for a business or another form of organisation.</p>
+		    <p style="color:gray;">Please confirm your own age, even if this account is for a business or another form of organisation.</p>
 		</div>
 
 		<div class="step-2">
