--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,7 @@
 </section>
     {% endif %}
     </div>
+    <div id="modal-box"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
