improved profile page

--- a/app/templates/exonavbar.html
+++ b/app/templates/exonavbar.html
@@ -34,7 +34,7 @@
             </p>
           {% if current_user.is_authenticated %}
           <p class="control">
-              <a href="/profile/{{current_user.username}}/" class="button is-link is-outlined">
+              <a href="/user/{{current_user.username}}/" class="button is-link is-outlined">
                 <span id="cog" class="icon">
                   <i class="fa fa fa-user"></i>
                 </span>
