--- a/app/templates/profiles/user/edit.html
+++ b/app/templates/profiles/user/edit.html
@@ -41,6 +41,15 @@
         <div class="message"></div>
       </div>
       <br id="bio-anchor">
+    <h1><b>Visible on the map</b></h1>
+    <label class="switch">
+      <input type="checkbox" id="visible">
+      <span class="slider round"></span>
+    </label>
+    <div id="feedback-visible" class="feedback">
+        <div class="message"></div>
+      </div>
+      <br id="visible-anchor">
     <div id="location">
       <h1><b>Location</b></h1>
       <input class="input has-fixed-size" placeholder="Add your location" id="location-field" rows="2" value="{{ current_user.location }}"></input>
