--- a/app/static/css/profiles/user/edit.css
+++ b/app/static/css/profiles/user/edit.css
@@ -1,8 +1,8 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 70px;
-  height: 35px;
+  width: 60px;
+  height: 34px;
 }
 
 .switch input { 
@@ -26,10 +26,10 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 27.5px;
-  width: 27.5px;
-  left: 6px;
-  bottom: 3.5px;
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
   background-color: white;
   -webkit-transition: .3s;
   transition: .3s;
@@ -44,9 +44,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(30px);
-  -ms-transform: translateX(30px);
-  transform: translateX(30px);
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
 
 /* Rounded sliders */
@@ -84,6 +84,8 @@ input.errorClass, input.errorClass:hover {
   width: 100%;
   height: 200px;
   margin-top: 5px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .feedback {
@@ -102,12 +104,9 @@ input.errorClass, input.errorClass:hover {
 }
 
 .vanish {
-  display: none;
+  display: none !important;
 }
 
-.vanish button {
-    display: none;
-}
 
 select option[disabled] {
     display: none;
@@ -119,6 +118,10 @@ select option[disabled] {
   margin-top: 5px;
   margin-bottom: 5px;
   display: inline-block;
+}
+
+#skills {
+    text-align: middle;
 }
 
 #skills:empty {
