--- a/app/templates/profiles/user/edit.html
+++ b/app/templates/profiles/user/edit.html
@@ -15,7 +15,7 @@
   <section class="modal-card-body has-text-centered">
 
   <div id="edit-profile-image">
-      <img draggable="false" id="edit-profile-image-content" src="{{ current_user.profile_photo.src }}">
+      <img draggable="false" id="edit-profile-image-content" src="{{ user.profile_photo.src }}">
       <input type="file"  accept="image/*" name="image" id="upload" onchange="loadFile(event)" style="display: none;">
     <button class="button is-large is-white" id="edit-profile-upload">
     <span class="icon is-medium">
@@ -27,7 +27,7 @@
   <div>
     <div id="name">
       <h1><b>Name</b></h1>
-      <input class="input has-fixed-size" placeholder="Add your name" id="name-field" value="{% if current_user.name %}{{current_user.name}}{% else %}{{current_user.username}}{% endif %}"></input>
+      <input class="input has-fixed-size" placeholder="Add your name" id="name-field" value="{% if user.name %}{{user.name}}{% else %}{{user.username}}{% endif %}"></input>
     </div>
       <div id="feedback-name" class="feedback">
         <div class="message"></div>
@@ -35,7 +35,7 @@
       <br id="name-anchor">
     <div id="bio">
       <h1><b>Bio</b></h1>
-      <textarea class="textarea has-fixed-size" placeholder="Add your bio" id="bio-field" rows="3">{% if current_user.bio %}{{ current_user.bio }}{% endif %}</textarea>
+      <textarea class="textarea has-fixed-size" placeholder="Add your bio" id="bio-field" rows="3" maxlength="160">{% if user.bio %}{{ user.bio }}{% endif %}</textarea>
     </div>
       <div id="feedback-bio" class="feedback">
         <div class="message"></div>
@@ -43,7 +43,7 @@
       <br id="bio-anchor">
     <h1><b>Visible on the map</b></h1>
     <label class="switch">
-      <input type="checkbox" id="visible">
+      <input type="checkbox" id="visible" {% if user.is_visible %}checked{% endif %}>
       <span class="slider round"></span>
     </label>
     <div id="feedback-visible" class="feedback">
@@ -52,7 +52,7 @@
       <br id="visible-anchor">
     <div id="location">
       <h1><b>Location</b></h1>
-      <input class="input has-fixed-size" placeholder="Add your location" id="location-field" rows="2" value="{{ current_user.location }}"></input>
+      <input class="input has-fixed-size" placeholder="Add your location" id="location-field" rows="2" {% if user.address %}value="{{ user.address }}"{% endif %}></input>
       <div id="map">
       </div>
     </div>
@@ -62,7 +62,9 @@
       <br id="location-anchor">
     <div id="birthdate">
       <h1><b>Birthday</b></h1>
+      {% with selected_day = user.birthdate.day, selected_month = user.birthdate.month, selected_year = user.birthdate.year %}
       {% include "datepicker.html" %}
+      {% endwith %}
     </div>
       <div id="feedback-birthdate" class="feedback" class="feedback">
         <div class="message"></div>
@@ -84,26 +86,29 @@
     <br id="gender-anchor">
     <h1><b>Skills</b></h1>
       <div id="skills">
-      {% for skill in user.skills %}
+        {% for skill in user.skills %}
         <div class='skill'>
           <button class='button is-info is-normal'>
-            <span>{{ skill.title }}</span>
-            <span class='icon remove-skill'><a class="delete"></a></span></button>
+            <span class="skill-title">{{ skill.title }}</span>
+            <span class='icon remove-skill'><a class="delete"></a></span>
+          </button>
         </div>
-      {% endfor %}
-      {% if not current_user.has_skills(available_skills) %}
-      <div id="add-a-skill-wrap"><button id="add-a-skill" class="button is-info is-normal is-inverted">
-      <span>Add skill</span>
-      <span class="icon is-normal is-danger"><i class="fa fa-plus"></i>
-      </span></button></div>
-      </div>
+        {% endfor %}
+        {% if not user.has_skills(available_skills) %}
+        <div id="add-a-skill-wrap">
+          <button id="add-a-skill" class="button is-info is-normal is-inverted">
+            <span>Add skill</span>
+            <span class="icon is-normal is-danger"><i class="fa fa-plus"></i></span>
+          </button>
+        </div>
       {% endif %}
+      </div>
       <div id="skill-select-form" class="vanish">
         <div id='select-skill' class='select is-info'> 
           <select id="selected-skill"> 
             <option value='' disabled hidden selected>Select skill</option> 
             {% for title in available_skills %}
-            {% if not current_user.has_skill(title) %}
+            {% if not user.has_skill(title) %}
             <option>{{ title }}</option>
             {% endif %}
             {% endfor %}
