--- a/app/static/css/profiles/user/profile.css
+++ b/app/static/css/profiles/user/profile.css
@@ -145,6 +145,7 @@ font-family: Universe, "Helvetica Neue",sans-serif;
 	position: absolute; 
                 bottom: 10px; 
                 padding-right: 10px;
+    right: 0px;
 }
 
 #profile-bar {
