--- a/app/static/css/profiles/user/profile.css
+++ b/app/static/css/profiles/user/profile.css
@@ -15,8 +15,8 @@ font-family: Universe, "Helvetica Neue",sans-serif;
 }
 
 .add-specific-button {
-	border: solid 2px gray;
-	color: gray;
+	border: solid 2px lightgray;
+	color: darkgray;
 	height: 50px;
   width: 100%;
   line-height: 50px;
@@ -31,8 +31,9 @@ font-family: Universe, "Helvetica Neue",sans-serif;
 }
 
 .add-specific-button:hover {
-	-webkit-filter: brightness(85%);
-  	 filter: brightness(85%);
+	color: black;
+	background-color: rgba(200,200,200,0.25);
+
   	 cursor: pointer;
 }
 
