--- a/app/templates/profiles/user/profile.html
+++ b/app/templates/profiles/user/profile.html
@@ -8,8 +8,8 @@
         <img alt draggable="false" id="profile-image-content" src="{{ user.profile_photo.src }}">
         </a>
       </div>
-      <p class="title is-4" style="color:black"><b>{% if user.name %}{{ user.name }}{% else %}{{ user.username }}{% endif %}</b></p>
-      <p class="subtitle is-5" style="color:gray">@{{ user.username }}</p>
+      <p class="title is-4 selectable" style="color:black"><b>{% if user.name %}{{ user.name }}{% else %}{{ user.username }}{% endif %}</b></p>
+      <p class="subtitle is-5 selectable" style="color:gray">@{{ user.username }}</p>
     </div>
 
     <div id="profile-right">
@@ -31,11 +31,11 @@
       </div>
       <div id="profile-right-bottom">
         <div id="profile-birthdate" style="color: black;">
-          <span class="icon is-small"><i class="fa fa-birthday-cake" aria-hidden="true"></i></span><span>{{user.birthdate.year}}-{{user.birthdate.month}}-{{user.birthdate.day}}</span>
+          <span class="icon is-small"><i class="fa fa-birthday-cake" aria-hidden="true"></i></span><span class="selectable">{{user.birthdate.year}}-{{user.birthdate.month}}-{{user.birthdate.day}}</span>
         </div>
         {% if user.address %}
         <div id="profile-address" style="color: black;">
-          <span class="icon is-small"><i class="fa fa-map-marker" aria-hidden="true"></i></span><span>{{user.address}}</span>
+          <span class="icon is-small"><i class="fa fa-map-marker" aria-hidden="true"></i></span><span class="selectable">{{user.address}}</span>
         </div>
         {% endif %}
       </div>
@@ -47,7 +47,7 @@
     {% for skillrow in skillrows %}
     <div class="profile-skill-row">
     {% for skill in skillrow %}
-      <div class="profile-skill selectable" style="color: {{skill_aspects[skill.title]['color']}}; background-color: {{skill_aspects[skill.title]['background-color']}};"><span>{{skill.title}}</span></div>
+      <div class="profile-skill" style="color: {{skill_aspects[skill.title]['color']}}; background-color: {{skill_aspects[skill.title]['background-color']}};"><span>{{skill.title}}</span></div>
     {% endfor %}
     </div>
     {% endfor %}
@@ -56,19 +56,19 @@
   <div id="profile-tabs" class="container">
     <div class="tabs is-centered is-fullwidth is-toggle is-large" style="color: black;">
   <ul>
-    <li class="is-active">
+    <li class="is-active" data-content="#profile-connections">
       <a>
         <span class="icon is-small"><i class="fas fa-user" aria-hidden="true"></i></span>
         <span class="tabtext">Connections</span>
       </a>
     </li>
-    <li>
+    <li data-content="#profile-groups">
       <a>
         <span class="icon is-small"><i class="fas fa-group" aria-hidden="true"></i></span>
         <span class="tabtext">Groups</span>
       </a>
     </li>
-    <li>
+    <li data-content="#profile-projects">
       <a>
         <span class="icon is-small"><i class="fas fa-pencil-alt" aria-hidden="true"></i></span>
         <span class="tabtext">Projects</span>
@@ -77,17 +77,26 @@
   </ul>
 </div>
  <div id="profile-tabs-content">
-    <div id="profile-connections">
+    <div id="profile-connections" class="profile-associate">
       {% for connection in user.connections %}
       {% endfor %}
+      {% if user==current_user %}
+      <div class="add-specific-button"><span>Add connection</span></div>
+      {% endif %}
     </div>
-    <div id="profile-groups">
+    <div id="profile-groups" class="profile-associate vanish">
       {% for group in user.groups %}
       {% endfor %}
+      {% if user==current_user %}
+      <div class="add-specific-button"><span>Create group</span></div>
+      {% endif %}
     </div>
-    <div id="profile-projects">
+    <div id="profile-projects" class="profile-associate vanish">
       {% for project in user.projects %}
       {% endfor %}
+      {% if user==current_user %}
+      <div class="add-specific-button"><span>Create project</span></div>
+      {% endif %}
     </div>
  </div>
   </div>
@@ -272,22 +281,22 @@ load_edit_js();
 <script type="text/javascript">
 
   $(document).on('click', '#profile-image a', function(e) {
-    redirect("/user/{{user.username}}/photo/", "user-photo","Profile photo", changeToPhoto);
+    redirect({id:"user-photo"},"Profile photo", "/user/{{user.username}}/photo/", changeToPhoto);
       e.preventDefault();
   });
 
 
   $(document).on('click', '#edit', function(e) {
-    redirect("/settings/profile/", "edit-user","Edit profile", changeToEdit);
+    redirect({id:"edit-user"},"Edit profile", "/settings/profile/", changeToEdit);
     e.preventDefault();
   });
 
 $(document).on('click', '.close', function() {
-  redirect("/user/{{user.username}}/", "user-profile", "Profile photo", changeToProfile);
+  redirect({id:"user-profile"}, "Profile photo", "/user/{{user.username}}/", changeToProfile);
 });
 
 $(document).on('click', '.modal-background', function() {
-    redirect("/user/{{user.username}}/", "user-profile", "Profile", changeToProfile);
+    redirect({id:"user-profile"}, "Profile", "/user/{{user.username}}/", changeToProfile);
 });
 
 $(window).on("popstate", function() {
